--- a/html/blogs/resume.css
+++ b/html/blogs/resume.css
@@ -1,10 +1,15 @@
 body {
-    background-color: #868b96;
-    color: rgb(8, 8, 8);
+    background-color: #9a97ab;
+    color: rgb(3, 28, 92);
       font-family: 'Oswald', sans-serif;
   }
   
   header {
     text-align: center;
     margin-top: 5px;
+  }
+  aside{
+    background-color: #2476a8;
+    color: rgb(241, 242, 244);
+      font-family: 'Oswald',
   }
