--- a/html/schedule/fashion.css
+++ b/html/schedule/fashion.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #242f44;
+    background-color: #9e966b;
     color: white;
       font-family: 'Oswald', sans-serif;
   }
@@ -53,13 +53,13 @@ body {
     position: fixed;
     width: 100%;
     bottom: 5px;
-    background-color: #242f44;
+    background-color: #0a3921;
     z-index: 5;
   }
   footer h3 {
     display: inline-block;
     font-size: 14px;
-    background-color: #242f44;
+    background-color: #0d4819;
   }
   
   .container {
