--- a/html/blogs/flex.css
+++ b/html/blogs/flex.css
@@ -88,6 +88,7 @@ body {
   .reminders {
     background-color: khaki;
         display: inline-flex;
+        flex-grow: 2;
       }
 
   
@@ -133,3 +134,4 @@ body {
     margin-left: 20px;
   }
  
+
